# Blyss-API

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  render.yaml
.github/workflows/: ci.yml
app/: config.py  main.py
app/api/client/: __init__.py  resend.py
app/api/router/: __init__.py  api.py
app/api/router/v1/: auth.py  flowers.py  plants.py  protected.py
app/api/service/: __init__.py  auth_service.py
app/database/: alembic.ini  session.py  setup.py  url.py
app/database/alembic/: README.md  env.py
app/database/alembic/versions/: 20260222_0001_create_users_table.py  20260222_0002_expand_social_plant_schema.py  20260222_0003_add_auth_tables.py  20260225_0004_pivot_to_virtual_flower_gifts.py
app/database/models/: __init__.py  auth.py  badge.py  flower.py  plant.py  social.py  user.py
app/security/: auth.py  rate_limit.py
apps/mobile/: .env.example  App.tsx  package.json  tsconfig.json
apps/mobile/assets/lottie/: flower-bloom.json
apps/mobile/src/: config.ts
apps/mobile/src/__tests__/: auth-flowers.smoke.test.tsx
apps/mobile/src/auth/: AuthContext.tsx  sessionStorage.ts
apps/mobile/src/components/: GlobalBanner.tsx
apps/mobile/src/flowers/: FlowersContext.tsx  shareTokenHistory.ts
apps/mobile/src/hooks/: useAuthGuard.ts
apps/mobile/src/navigation/: types.ts
apps/mobile/src/screens/: CreateFlowerScreen.tsx  FlowerDetailScreen.tsx  FlowersListScreen.tsx  OpenGiftScreen.tsx  ProfileScreen.tsx  RequestOtpScreen.tsx  VerifyOtpScreen.tsx
tests/: test_flowers.py  test_health.py  test_plants.py
